ilgili görevler tamamlandı

--- a/about.html
+++ b/about.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Döküman</title>
-</head>
-<body>
-    <h1> Hakkında </h1>
-</body>
+    <link rel="stylesheet" href="/style/index.css" />
+  </head>
+  <body>
+    <div class="all-content">
+      <div class="header-section">
+        <div class="my-name">
+          <a href="index.html" style="text-decoration: none"
+            ><h1>Yiğit Zarbun</h1></a
+          >
+        </div>
+        <div class="top-menu-nav">
+          <nav>
+            <a href="index.html">Ana Sayfa</a>
+            <a
+              href="about.html"
+              style="background-color: rgb(0, 60, 255); color: white"
+              >Hakkımda</a
+            >
+            <a href="contact.html">İletişim</a>
+            <a href="projects.html">Projeler</a>
+          </nav>
+        </div>
+      </div>
+      <div class="top-main-section">
+        <div class="top-main-section-texts">
+          <h2>Hakkımda birkaç not</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+            nisi soluta error cumque aliquam quas id eum vel maiores. Corporis
+            doloremque ab aut dolore odio molestiae mollitia animi corrupti
+            minima.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iusto
+            numquam quia dolores ut. Dignissimos voluptates sunt ut aspernatur
+            animi eaque saepe reprehenderit suscipit fugit explicabo, corporis
+            molestiae omnis fugiat.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur
+            reiciendis cumque maiores natus commodi, error facilis. Illum quidem
+            ullam dolorum nulla consequuntur. Consequatur dolorum beatae porro
+            corporis. Dolor, libero.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur
+            reiciendis cumque maiores natus commodi, error facilis. Illum quidem
+            ullam dolorum nulla consequuntur. Consequatur dolorum beatae porro
+            corporis. Dolor, libero.
+          </p>
+        </div>
+        <div class="top-main-section-image">
+          <img src="/style/images/camping.jpg" />
+        </div>
+      </div>
+      <div class="contact-section">
+        <div class="contact-section-text">
+          <p>Gördüklerin ilgini çekti mi?</p>
+        </div>
+        <div class="contact-section-button">
+          <a href="contact.html">Bana Ulaş</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <a href="https://www.airbnb.com.tr/" target="_blank"
+          ><img src="style/images/airbnb.png"
+        /></a>
+        <a href="https://github.com/yigitzarbun" target="_blank"
+          ><img src="style/images/github.png"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/yigit-zarbun-732924107/"
+          target="_blank"
+        >
+          <img src="style/images/linkedin.png" />
+        </a>
+        <a href="https://www.couchsurfing.com/" target="_blank">
+          <img src="style/images/social.png"
+        /></a>
+      </div>
+    </div>
+  </body>
 </html>
