--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=    <h1> ABOUT </h1>, initial-scale=1.0"
+    />
     <title>Döküman</title>
-</head>
-<body>
-    <h1> İletişim </h1>
-</body>
+    <link rel="stylesheet" href="/style/index.css" />
+  </head>
+  <body>
+    <div class="all-content">
+      <div class="header-section">
+        <div class="my-name">
+          <a href="index.html" style="text-decoration: none"
+            ><h1>Yiğit Zarbun</h1></a
+          >
+        </div>
+        <div class="top-menu-nav">
+          <nav>
+            <a href="index.html">Ana Sayfa</a>
+            <a href="about.html">Hakkımda</a>
+            <a
+              href="contact.html"
+              style="background-color: rgb(0, 60, 255); color: white"
+              >İletişim</a
+            >
+            <a href="projects.html">Projeler</a>
+          </nav>
+        </div>
+      </div>
+      <div class="contact-section">
+        <div class="contact-section-text">
+          <h2>Benimle iletişime geçmek istemene sevindim!</h2>
+          <p>
+            Aşağıdaki <span class="color-text"> 'Bana Ulaş'</span> butonu
+            aracılığıyla benimle iletişime geçebilirsin.
+          </p>
+        </div>
+        <div class="contact-section-button">
+          <a href="mailto:yzarbun@gmail.com">Bana Ulaş</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <a href="https://www.airbnb.com.tr/" target="_blank"
+          ><img src="style/images/airbnb.png"
+        /></a>
+        <a href="https://github.com/yigitzarbun" target="_blank"
+          ><img src="style/images/github.png"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/yigit-zarbun-732924107/"
+          target="_blank"
+        >
+          <img src="style/images/linkedin.png" />
+        </a>
+        <a href="https://www.couchsurfing.com/" target="_blank">
+          <img src="style/images/social.png"
+        /></a>
+      </div>
+    </div>
+  </body>
 </html>
