--- a/index.html
+++ b/index.html
@@ -1,11 +1,182 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yigit Zarbun's Portfolio</title>
+    <link rel="stylesheet" href="/style/index.css" />
+  </head>
+  <body>
+    <div class="all-content">
+      <div class="header-section">
+        <div class="my-name">
+          <a href="index.html" style="text-decoration: none"
+            ><h1>Yiğit Zarbun</h1></a
+          >
+        </div>
+        <div class="top-menu-nav">
+          <nav>
+            <a
+              href="index.html"
+              style="background-color: rgb(0, 60, 255); color: white"
+              >Ana Sayfa</a
+            >
+            <a href="about.html">Hakkımda</a>
+            <a href="contact.html">İletişim</a>
+            <a href="projects.html">Projeler</a>
+          </nav>
+        </div>
+      </div>
+      <div class="all-main-section">
+        <div class="top-main-section">
+          <div class="top-main-section-image">
+            <img
+              src="https://i.picsum.photos/id/2/5000/3333.jpg?hmac=_KDkqQVttXw_nM-RyJfLImIbafFrqLsuGO5YuHqD-qQ"
+              alt="my-work-image"
+            />
+          </div>
+          <div class="top-main-section-texts">
+            <h2>Yiğit Zarbun</h2>
+            <a href="projects.html">Projeler</a>
+            <p>
+              Şüphelenme, Eleştirme, Yeni Arayışlara Girme ve Geliştirme... işte
+              geçmişimi özetleyen ve gelecekten beklentilerimi şekillendiren
+              evreler bunlar. <br /><br />
+              Sırasıyla uluslararası İlişkiler (2011-2015), Uluslararası İşletme
+              (2015-2016) ve Enerji (2018) alanlarında aldığım eğitim sonrasında
+              ihracat (2018-2021), iş geliştirme ve strateji (2021-2023)
+              alanlarında <span class="color-text">iş deneyimi edindim</span>.
+              <br /><br />
+              Son zamanlarda geçmişte 'üretilenleri satmak / pazarlamak' üzerine
+              kurguladığım profesyonel kariyerimden şüphelenmem nedeniyle
+              <span class="color-text"
+                >üretim faaliyetlerinde doğrudan rol alabileceğim
+              </span>
+              ve diğer insanlarla birlikte hayaller kurup, bunları
+              gerçekleştirebileceğim yeni bir kariyer yolculuğuna başlamaya
+              karar verdim. <br />
+              <br />
+              Bu doğrultuda
+              <span class="color-text">web geliştirme </span>alanında eğitim
+              almaya karar verdim (2022). Son aylarda üzerinde çalıştığım
+              projelerden bazılarına aşağıda yer verdim. Birlikte çalışmak
+              ve/veya projelerim hakkında sohbet etmek istersen, benimle
+              iletişime geçebilirsin.
+            </p>
+          </div>
+        </div>
+        <div class="bottom-main-section">
+          <div class="bottom-main-section-banner">
+            <div class="bottom-main-section-banner-image">
+              <img src="/style/images/daisy.jpeg" />
+            </div>
+            <div class="bottom-main-section-banner-text">
+              <h4>İş Dışı Deneyimlerim</h4>
+              <ul>
+                <li>
+                  6 senelik İngiltere ve Birleşik Krallık eğitim ve yaşam
+                  deneyimine sahibim.
+                </li>
+                <li>
+                  İstanbul Kadıköy'de 40'ın üzerinde ülkeden 200'ün üzerinde
+                  misafiri ağırladım
+                </li>
+                <li>
+                  8 yaşından beri devamlı olarak tenis oynuyorum. Ulusal ve
+                  uluslararası turnuvalara katıldım.
+                </li>
+                <li>
+                  2020 doğumlu Daisy isminde bir Maltipoo cins köpeği
+                  sahiplendim. Daisy, yetiştiği coğrafyadaki toplumsal ve
+                  ekonomik koşullar gereğince kendisinin yanından yemek
+                  verilmeden veya karın bölgesi kaşınmadan geçişe müsade
+                  etmiyor.
+                </li>
+              </ul>
+              <div class="contact-section-button-blue-background">
+                <a href="contact.html">Bana Ulaş</a>
+              </div>
+            </div>
+          </div>
+          <div class="bottom-main-section-first-row-projects">
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/57/2448/3264.jpg?hmac=ewraXYesC6HuSEAJsg3Q80bXd1GyJTxekI05Xt9YjfQ"
+              />
+              <h3>Hostel Life</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/58/1280/853.jpg?hmac=YO3QnOm9TpyM5DqsJjoM4CHg8oIq4cMWLpd9ALoP908"
+              />
+              <h3>2nd Hand Furniture Trade</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/59/2464/1632.jpg?hmac=uTfe6jCzLvCzANvJgtpo-a0fKhO8BvjpwLNYX3lqx_Q"
+              />
+              <h3>Flat-Share App</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/50/4608/3072.jpg?hmac=E6WgCk6MBOyuRjW4bypT6y-tFXyWQfC_LjIBYPUspxE"
+              />
+              <h3>Dinner Share App</h3>
+            </div>
+          </div>
+          <div class="bottom-main-section-second-row-projects">
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/49/1280/792.jpg?hmac=NnUJy0O9-pXHLmY2loqVs2pJmgw9xzuixgYOk4ALCXU"
+              />
+              <h3>Local Social Networking</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/63/5000/2813.jpg?hmac=HvaeSK6WT-G9bYF_CyB2m1ARQirL8UMnygdU9W6PDvM"
+              />
+              <h3>Post-Modern Travel App</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/71/5000/3333.jpg?hmac=wBjyqoAke0uv6bTtbbIby9s-VTQ52gIkI-QVXWS3W0I"
+              />
+              <h3>Everyday Personal Assistant</h3>
+            </div>
+            <div class="bottom-main-part-project">
+              <img
+                src="https://i.picsum.photos/id/74/4288/2848.jpg?hmac=q02MzzHG23nkhJYRXR-_RgKTr6fpfwRgcXgE0EKvNB8"
+              />
+              <h3>Citizenship App</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact-section">
+        <div class="contact-section-text">
+          <p>Gördüklerin ilgini çekti mi?</p>
+        </div>
+        <div class="contact-section-button">
+          <a href="contact.html">Bana Ulaş</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <a href="https://www.airbnb.com.tr/" target="_blank"
+          ><img src="style/images/airbnb.png"
+        /></a>
+        <a href="https://github.com/yigitzarbun" target="_blank"
+          ><img src="style/images/github.png"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/yigit-zarbun-732924107/"
+          target="_blank"
+        >
+          <img src="style/images/linkedin.png" />
+        </a>
+        <a href="https://www.couchsurfing.com/" target="_blank">
+          <img src="style/images/social.png"
+        /></a>
+      </div>
+    </div>
+  </body>
 </html>
