--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Döküman</title>
-</head>
-<body>
-    <h1> Projeler </h1>
-</body>
+    <link rel="stylesheet" href="/style/index.css" />
+  </head>
+  <body>
+    <div class="all-content">
+      <div class="header-section">
+        <div class="my-name">
+            <a href="index.html" style="text-decoration: none"
+            ><h1>Yiğit Zarbun</h1></a
+          >
+        </div>
+        <div class="top-menu-nav">
+          <nav>
+            <a
+              href="index.html"
+              
+              >Ana Sayfa</a
+            >
+            <a href="about.html">Hakkımda</a>
+            <a href="contact.html">İletişim</a>
+            <a href="projects.html" style="background-color: rgb(0, 60, 255); color: white">Projeler</a>
+          </nav>
+        </div>
+      </div>
+      <hr style="border: 4rem;"/>
+      <div class="bottom-main-section-first-row-projects">
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/57/2448/3264.jpg?hmac=ewraXYesC6HuSEAJsg3Q80bXd1GyJTxekI05Xt9YjfQ"
+          />
+          <h3>Hostel Life</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/58/1280/853.jpg?hmac=YO3QnOm9TpyM5DqsJjoM4CHg8oIq4cMWLpd9ALoP908"
+          />
+          <h3>2nd Hand Furniture Trade</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/59/2464/1632.jpg?hmac=uTfe6jCzLvCzANvJgtpo-a0fKhO8BvjpwLNYX3lqx_Q"
+          />
+          <h3>Flat-Share App</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/50/4608/3072.jpg?hmac=E6WgCk6MBOyuRjW4bypT6y-tFXyWQfC_LjIBYPUspxE"
+          />
+          <h3>Dinner Share App</h3>
+        </div>
+      </div>
+      <div class="bottom-main-section-second-row-projects">
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/49/1280/792.jpg?hmac=NnUJy0O9-pXHLmY2loqVs2pJmgw9xzuixgYOk4ALCXU"
+          />
+          <h3>Local Social Networking</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/63/5000/2813.jpg?hmac=HvaeSK6WT-G9bYF_CyB2m1ARQirL8UMnygdU9W6PDvM"
+          />
+          <h3>Post-Modern Travel App</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/71/5000/3333.jpg?hmac=wBjyqoAke0uv6bTtbbIby9s-VTQ52gIkI-QVXWS3W0I"
+          />
+          <h3>Everyday Personal Assistant</h3>
+        </div>
+        <div class="bottom-main-part-project">
+          <img
+            src="https://i.picsum.photos/id/74/4288/2848.jpg?hmac=q02MzzHG23nkhJYRXR-_RgKTr6fpfwRgcXgE0EKvNB8"
+          />
+          <h3>Citizenship App</h3>
+        </div>
+      </div>
+    </div>
+    <div class="contact-section">
+        <div class="contact-section-text">
+          <p>Gördüklerin ilgini çekti mi?</p>
+        </div>
+        <div class="contact-section-button">
+          <a href="contact.html">Bana Ulaş</a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <a href="https://www.airbnb.com.tr/" target="_blank"
+          ><img src="style/images/airbnb.png"
+        /></a>
+        <a href="https://github.com/yigitzarbun" target="_blank"
+          ><img src="style/images/github.png"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/yigit-zarbun-732924107/"
+          target="_blank"
+        >
+          <img src="style/images/linkedin.png" />
+        </a>
+        <a href="https://www.couchsurfing.com/" target="_blank">
+          <img src="style/images/social.png"
+        /></a>
+      </div>
+  </div>
+    </div>
+  </body>
 </html>
