responsive görevleri yapıldı

--- a/about.html
+++ b/about.html
@@ -28,40 +28,40 @@
         </div>
       </div>
       <div class="top-main-section">
+        <div class="top-main-section-image">
+          <img src="/style/images/camping.jpg" />
+        </div>
         <div class="top-main-section-texts">
           <h2>Hakkımda birkaç not</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-            nisi soluta error cumque aliquam quas id eum vel maiores. Corporis
-            doloremque ab aut dolore odio molestiae mollitia animi corrupti
-            minima.
+            Sırasıyla uluslararası İlişkiler (2011-2015), Uluslararası İşletme
+            (2015-2016) ve Enerji (2018) alanlarında aldığım eğitimler
+            sonrasında ihracat (2018-2021), iş geliştirme ve strateji
+            (2021-2023) alanlarında
+            <span class="color-text">iş deneyimi edindim</span>. <br /><br />
+            Kariyerimin ilk dönemindeki ihracat, satış ve iş geliştirme
+            pozisyonlarında 'üretileni satmak / pazarlamak' üzerine odaklandım.
+            Fakat, öğrenme eğrimdeki yavaşlamadan rahatsız olmam ve kariyerimin
+            kişisel gelişimime katkısının azalması nedeniyle kariyer rotamdan
+            şüphelenmeye başladım. Ardından, bu gidişatı eleştirme aşamasına
+            geçtim. Son olarak da yeni kariyer arayışına girerek, nihayetinde
+            <span class="color-text"
+              >üretim faaliyetlerinde doğrudan rol alabileceğim
+            </span>
+            ve diğer insanlarla birlikte hayaller kurup, bunları
+            gerçekleştirebileceğim yeni bir kariyer yolculuğuna başlamaya karar
+            verdim. <br />
+            <br />
+            Bu doğrultuda
+            <span class="color-text">web geliştirme </span>alanında eğitim
+            almaya karar verdim (2022). Birlikte çalışmak ve/veya projelerim
+            hakkında sohbet etmek istersen, benimle iletişime geçebilirsin.
           </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iusto
-            numquam quia dolores ut. Dignissimos voluptates sunt ut aspernatur
-            animi eaque saepe reprehenderit suscipit fugit explicabo, corporis
-            molestiae omnis fugiat.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur
-            reiciendis cumque maiores natus commodi, error facilis. Illum quidem
-            ullam dolorum nulla consequuntur. Consequatur dolorum beatae porro
-            corporis. Dolor, libero.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur
-            reiciendis cumque maiores natus commodi, error facilis. Illum quidem
-            ullam dolorum nulla consequuntur. Consequatur dolorum beatae porro
-            corporis. Dolor, libero.
-          </p>
-        </div>
-        <div class="top-main-section-image">
-          <img src="/style/images/camping.jpg" />
         </div>
       </div>
       <div class="contact-section">
         <div class="contact-section-text">
-          <p>Gördüklerin ilgini çekti mi?</p>
+          <p>Hakkımda okudukların ilgini çekti mi?</p>
         </div>
         <div class="contact-section-button">
           <a href="contact.html">Bana Ulaş</a>
