--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yigit Zarbun's Portfolio</title>
     <link rel="stylesheet" href="/style/index.css" />
   </head>
   <body>
     <div class="all-content">
-      <div class="header-section">
+      <header class="header-section">
         <div class="my-name">
+          <img src="/style/images/daisy_ve_ben.jpeg" />
           <a href="index.html" style="text-decoration: none"
             ><h1>Yiğit Zarbun</h1></a
           >
@@ -26,43 +27,23 @@
             <a href="projects.html">Projeler</a>
           </nav>
         </div>
-      </div>
+      </header>
       <div class="all-main-section">
         <div class="top-main-section">
           <div class="top-main-section-image">
-            <img
-              src="https://i.picsum.photos/id/2/5000/3333.jpg?hmac=_KDkqQVttXw_nM-RyJfLImIbafFrqLsuGO5YuHqD-qQ"
-              alt="my-work-image"
-            />
+            <img src="/style/images/psych1.jpg" alt="my-work-image" />
           </div>
           <div class="top-main-section-texts">
             <h2>Yiğit Zarbun</h2>
-            <a href="projects.html">Projeler</a>
             <p>
               Şüphelenme, Eleştirme, Yeni Arayışlara Girme ve Geliştirme... işte
               geçmişimi özetleyen ve gelecekten beklentilerimi şekillendiren
-              evreler bunlar. <br /><br />
-              Sırasıyla uluslararası İlişkiler (2011-2015), Uluslararası İşletme
-              (2015-2016) ve Enerji (2018) alanlarında aldığım eğitim sonrasında
-              ihracat (2018-2021), iş geliştirme ve strateji (2021-2023)
-              alanlarında <span class="color-text">iş deneyimi edindim</span>.
-              <br /><br />
-              Son zamanlarda geçmişte 'üretilenleri satmak / pazarlamak' üzerine
-              kurguladığım profesyonel kariyerimden şüphelenmem nedeniyle
-              <span class="color-text"
-                >üretim faaliyetlerinde doğrudan rol alabileceğim
-              </span>
-              ve diğer insanlarla birlikte hayaller kurup, bunları
-              gerçekleştirebileceğim yeni bir kariyer yolculuğuna başlamaya
-              karar verdim. <br />
-              <br />
-              Bu doğrultuda
-              <span class="color-text">web geliştirme </span>alanında eğitim
-              almaya karar verdim (2022). Son aylarda üzerinde çalıştığım
-              projelerden bazılarına aşağıda yer verdim. Birlikte çalışmak
-              ve/veya projelerim hakkında sohbet etmek istersen, benimle
-              iletişime geçebilirsin.
+              prensipler bunlar.<br /><br />
+              Hayata yaklaşımım ilgini çekti mi? Bir de üzerinde çalıştığım web
+              geliştirme projelerine göz atmak ister misin?
             </p>
+            <br />
+            <a href="projects.html">Projeler</a>
           </div>
         </div>
         <div class="bottom-main-section">
@@ -98,56 +79,56 @@
               </div>
             </div>
           </div>
-          <div class="bottom-main-section-first-row-projects">
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/57/2448/3264.jpg?hmac=ewraXYesC6HuSEAJsg3Q80bXd1GyJTxekI05Xt9YjfQ"
-              />
-              <h3>Hostel Life</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/58/1280/853.jpg?hmac=YO3QnOm9TpyM5DqsJjoM4CHg8oIq4cMWLpd9ALoP908"
-              />
-              <h3>2nd Hand Furniture Trade</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/59/2464/1632.jpg?hmac=uTfe6jCzLvCzANvJgtpo-a0fKhO8BvjpwLNYX3lqx_Q"
-              />
-              <h3>Flat-Share App</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/50/4608/3072.jpg?hmac=E6WgCk6MBOyuRjW4bypT6y-tFXyWQfC_LjIBYPUspxE"
-              />
-              <h3>Dinner Share App</h3>
-            </div>
-          </div>
-          <div class="bottom-main-section-second-row-projects">
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/49/1280/792.jpg?hmac=NnUJy0O9-pXHLmY2loqVs2pJmgw9xzuixgYOk4ALCXU"
-              />
-              <h3>Local Social Networking</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/63/5000/2813.jpg?hmac=HvaeSK6WT-G9bYF_CyB2m1ARQirL8UMnygdU9W6PDvM"
-              />
-              <h3>Post-Modern Travel App</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/71/5000/3333.jpg?hmac=wBjyqoAke0uv6bTtbbIby9s-VTQ52gIkI-QVXWS3W0I"
-              />
-              <h3>Everyday Personal Assistant</h3>
-            </div>
-            <div class="bottom-main-part-project">
-              <img
-                src="https://i.picsum.photos/id/74/4288/2848.jpg?hmac=q02MzzHG23nkhJYRXR-_RgKTr6fpfwRgcXgE0EKvNB8"
-              />
-              <h3>Citizenship App</h3>
+          <div class="all-projects">
+            <div class="bottom-main-section-first-row-projects">
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/57/2448/3264.jpg?hmac=ewraXYesC6HuSEAJsg3Q80bXd1GyJTxekI05Xt9YjfQ"
+                />
+                <h3>Hostel Life</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/58/1280/853.jpg?hmac=YO3QnOm9TpyM5DqsJjoM4CHg8oIq4cMWLpd9ALoP908"
+                />
+                <h3>2nd Hand Furniture Trade</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/59/2464/1632.jpg?hmac=uTfe6jCzLvCzANvJgtpo-a0fKhO8BvjpwLNYX3lqx_Q"
+                />
+                <h3>Flat-Share App</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/50/4608/3072.jpg?hmac=E6WgCk6MBOyuRjW4bypT6y-tFXyWQfC_LjIBYPUspxE"
+                />
+                <h3>Dinner Share App</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/49/1280/792.jpg?hmac=NnUJy0O9-pXHLmY2loqVs2pJmgw9xzuixgYOk4ALCXU"
+                />
+                <h3>Local Social Networking</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/63/5000/2813.jpg?hmac=HvaeSK6WT-G9bYF_CyB2m1ARQirL8UMnygdU9W6PDvM"
+                />
+                <h3>Post-Modern Travel App</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/71/5000/3333.jpg?hmac=wBjyqoAke0uv6bTtbbIby9s-VTQ52gIkI-QVXWS3W0I"
+                />
+                <h3>Everyday Personal Assistant</h3>
+              </div>
+              <div class="bottom-main-part-project">
+                <img
+                  src="https://i.picsum.photos/id/74/4288/2848.jpg?hmac=q02MzzHG23nkhJYRXR-_RgKTr6fpfwRgcXgE0EKvNB8"
+                />
+                <h3>Citizenship App</h3>
+              </div>
             </div>
           </div>
         </div>
