--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,7 @@
         </div>
         <div class="top-menu-nav">
           <nav>
-            <a
-              href="index.html"
-              
-              >Ana Sayfa</a
-            >
+            <a href="index.html">Ana Sayfa</a>
             <a href="about.html">Hakkımda</a>
             <a href="contact.html">İletişim</a>
             <a href="projects.html" style="background-color: rgb(0, 60, 255); color: white">Projeler</a>
@@ -28,6 +24,13 @@
         </div>
       </div>
       <hr style="border: 4rem;"/>
+      <div class="projects-page-top-section">
+        <img src="/style/images/devices1.jpg">
+      <div class="projects-page-texts">
+        <h2>Bunlar Benim Projelerim</h2>
+        <p>Özellikle <span class="color-text">döngüsel ekonomi </span>teması üzerine yaptığım sosyal girişimcilik projelerinden bazılarına bu sayfada yer verdim. Projelerim hakkında detaylı bilgi almak için benimle iletişime geçebilirsin.</p>
+      </div>
+      </div>
       <div class="bottom-main-section-first-row-projects">
         <div class="bottom-main-part-project">
           <img
@@ -53,8 +56,6 @@
           />
           <h3>Dinner Share App</h3>
         </div>
-      </div>
-      <div class="bottom-main-section-second-row-projects">
         <div class="bottom-main-part-project">
           <img
             src="https://i.picsum.photos/id/49/1280/792.jpg?hmac=NnUJy0O9-pXHLmY2loqVs2pJmgw9xzuixgYOk4ALCXU"
@@ -80,8 +81,7 @@
           <h3>Citizenship App</h3>
         </div>
       </div>
-    </div>
-    <div class="contact-section">
+      <div class="contact-section">
         <div class="contact-section-text">
           <p>Gördüklerin ilgini çekti mi?</p>
         </div>
@@ -89,6 +89,7 @@
           <a href="contact.html">Bana Ulaş</a>
         </div>
       </div>
+    </div>
       <div class="footer-section">
         <a href="https://www.airbnb.com.tr/" target="_blank"
           ><img src="style/images/airbnb.png"
@@ -106,7 +107,8 @@
           <img src="style/images/social.png"
         /></a>
       </div>
-  </div>
     </div>
+    </div>
+    
   </body>
 </html>
